--- a/file/default.css
+++ b/file/default.css
@@ -21,16 +21,17 @@ a {
     position: relative;
     margin: 0 auto;
     width: 1100px;
-    height: 680px;
+    height: 1038px;
     margin-top: 10px;
 }
 
 #text {
     width: 292px;
-    height: 560px;
+    height: 660px;
     left: 188px;
     top: 80px;
     position: absolute;
+    overflow:auto
 }
 
 #code {
@@ -41,7 +42,7 @@ a {
 #clock-box {
     position: absolute;
     left: 60px;
-    top: 550px;
+    top: 937px;
     font-size: 28px;
     display: none;
 }
@@ -62,7 +63,7 @@ a {
 #canvas {
     margin: 0 auto;
     width: 1100px;
-    height: 680px;
+    height: 1038px;
 }
 
 #error {
